[package]
name = "rust_exchange"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.com_dev_4fx_sor_codecs_sbe]
path = "/Users/anton/IdeaProjects/sor/codecs/build/generated-rust-src/com_dev4fx_sor_codecs_sbe"
